src/assets/css/style.css
:root {
  --main-bg-color: #eff8ff;
  --map-bg-color: #343332;
  --main-body-type: #0f242c;
}

html,
input {
  background-color: var(--main-bg-color);
}

[v-cloak] {
  visibility: hidden;
}
body {
  width: 100%;
  overflow-x: hidden;
  position: relative;
}

#container {
  width: 95%;
  padding-top: 2rem;
  margin: 0 auto;
}

#title {
  padding: 7rem 0 4rem 0;
  text-align: center;
}

#title > h2 {
  margin-bottom: 0;
}

#title > h5 {
  opacity: 0.75;
}

.intro {
  width: 40%;
  margin: 0 auto;
  padding-bottom: 7rem;
}

#chart-one svg {
  position: sticky;
  position: -webkit-sticky;
  top: 40px;
}

.axis-title {
  font-weight: bold;
}

#chart-one-title {
  font-weight: bold;
  font-size: 2.5rem;
  fill: #485465;
  /* opacity: 0.8; */
}

div,
rect,
path,
text,
g,
circle,
line {
  transition: all 0.3s ease-in-out;
}

rect:hover {
  cursor: pointer;
  box-shadow: 0px 2px 8px 0px rgba(59, 59, 61, 0.4);
  transition: fill ease-in-out 0.2s;
}

.circle-up {
  fill: #fff;
  stroke: #000;
}

.circle-active {
  fill: blue;
  stroke: #000;
}

.link {
  stroke: black;
  stroke-width: 2px;
  /* stroke-opacity: 0.8; */
  fill: none;
}
.area-one {
  fill: #afdced;
  opacity: 0.5;
}

.area-two {
  fill: #afdced;
  opacity: 0.8;
}

.area-three {
  fill: #80ceed;
  opacity: 0.6;
}

.area-four {
  fill: #51c1ed;
  opacity: 0.6;
}

/* tooltip */
div.tooltip {
  position: fixed;
  max-width: 350px;
  text-align: left;
  display: inline;
  padding: 10px;
  font-size: 1.5rem;
  /* font-size: 1rem; */
  line-height: 1.2;
  background-color: #fff;
  border: 0px;
  border-radius: 6px;
  pointer-events: none;
  color: var(--main-body-type);
  filter: drop-shadow(0px 2px 8px rgba(59, 59, 61, 0.4));
}

.tooltip h5 {
  padding: 0;
  margin-top: 0.2rem;
  /* line-height: 0; */
  /* margin-bottom: 1.2rem; */
}

.box-title {
  /* font-weight: 600; */
  margin-bottom: 0.75rem;
  border-bottom: 1px dashed var(--main-body-type);
}
.datum {
  font-weight: bold;
  /* border-bottom: 2px dashed #3d3d3d; */
}

select {
  font-size: 80%;
}

select:hover {
  cursor: pointer;
}

/* fill section */
.text-section {
  padding-bottom: 20rem;
  z-index: 999;
  font-size: 90%;
}

.text-box {
  /* transition: 1.5s all cubic-bezier(0.39, 0.575, 0.565, 1); */
  width: 45%;
  max-width: 800px;
  padding: 2rem 2rem 1.25rem 2rem;
  margin: 0 auto;
  margin-bottom: 60rem;
  z-index: 999;
  border-radius: 4px;
  opacity: 0.925;
  filter: drop-shadow(0px 2px 4px rgba(59, 59, 61, 0.4));
}

.section-one {
  background-color: var(--main-bg-color);
  border: 1px solid lightgray;
}

.section-two {
  background-color: var(--map-bg-color);
  color: #fff;
  border: 1px solid rgb(112, 112, 112, 0.2);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.5);

  /* width: 30%; */
  /* border: none; */
}

.section-two h5 {
  border-bottom: none;
}

/* map */

#map {
  position: sticky;
  position: -webkit-sticky;
  top: 0px;
  width: 110vw;
  margin-left: -3.65rem;
  height: 100vh;
}

.section-break {
  width: 50%;
  margin: 0 auto;
  padding-top: 8rem;
  padding-bottom: 10rem;
  text-align: center;
}

.section-break h5 {
  text-align: center;
}

.section-break > div {
  padding-top: 9rem;
  padding-bottom: 9rem;
  border-top: 2px solid rgba(0, 0, 0, 0.2);
  border-bottom: 2px solid rgba(0, 0, 0, 0.2);
  border-radius: 4;
}

